@@ -1,3 +1,8 @@
+2008-09-18  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/lcms.c (run): call gimp_displays_flush() at the
+	end of all interactive uses. Fixes bug #552104.
+
 2008-09-17  Sven Neumann  <sven@gimp.org>
 
 	* app/actions/edit-actions.c (edit_actions_update): formatting.
